# aegis-core

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
crates/aegis-api-types/: Cargo.toml
crates/aegis-api-types/src/: lib.rs
crates/aegis-crypto/: Cargo.toml
crates/aegis-crypto/src/: demo.rs  experimental_pq.rs  lib.rs  traits.rs
crates/aegis-identity/: Cargo.toml
crates/aegis-identity/src/: lib.rs
crates/aegis-proto/: Cargo.toml
crates/aegis-proto/src/: envelope.rs  error.rs  lib.rs  payload.rs  suite.rs  types.rs
crates/aegis-proto/tests/: serialization_fixtures.rs
crates/aegis-proto/tests/fixtures/: README.md  envelope.v0.1.json  identity_document.v0.1.json  prekey_bundle.v0.1.json  private_payload.v0.1.json
crates/aegis-testkit/: Cargo.toml
crates/aegis-testkit/src/: lib.rs
