[workspace]
members = [
    "crates/aegis-proto",
    "crates/aegis-crypto",
    "crates/aegis-identity",
    "crates/aegis-api-types",
    "crates/aegis-testkit",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Matthew Davis"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
blake3 = "1"
rand = "0.8"
chacha20poly1305 = "0.10"
