[package]
name = "aegis-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aegis-proto = { path = "../aegis-proto" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
blake3.workspace = true
rand.workspace = true
chacha20poly1305.workspace = true
