[package]
name = "aegis-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
experimental-pq = ["dep:pqcrypto-kyber", "dep:pqcrypto-traits"]

[dependencies]
aegis-proto = { path = "../aegis-proto" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
blake3.workspace = true
rand.workspace = true
chacha20poly1305.workspace = true
pqcrypto-kyber = { version = "0.8.1", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
